<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_button"
        android:title="@string/refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="always"
        ></item>
    <item
        android:id="@+id/settings_home"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"
        android:title="Settings"
        ></item>
    <item
        android:id="@+id/log_out_button"
        android:icon="@drawable/logoutbutton"
        app:showAsAction="ifRoom"
        android:title="@string/log_out"
        ></item>
    <item
        android:id="@+id/general_settings"
        android:title="@string/general_settings"
        ></item>
    <item
        android:id="@+id/topic_settings"
        android:title="@string/topic_options"
        ></item>
    <item
        android:id="@+id/source_settings"
        android:title="@string/source_options"
        ></item>
</menu>