<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        ></androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/usernameLayout"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/gator">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/username"
            android:hint="@string/username_hint"
            android:imeOptions="actionGo"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/passwordLayout"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/gator">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:imeOptions="actionGo"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/confirm_passwordLayout"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/gator">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/confirm_password"
            android:hint="@string/password_hint"
            android:imeOptions="actionGo"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="40dp"
            android:layout_width="100dp"
            android:id="@+id/login"
            android:text="@string/log_in"
            ></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/register"
            android:layout_marginStart="100dp"
            android:text="@string/register"
            ></androidx.appcompat.widget.AppCompatButton>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>